# ayn-4b

./: .gitmodules  README.md
firmware/: CMakeLists.txt  Makefile
firmware/Src/: main.c
